# c2-overlay

./: .gitignore  c2_overlay.py  pyproject.toml  readme.md
docs/: timestamps.md
src/c2_overlay/: __init__.py  ass_lint.py  cli.py  core.py  fit.py  overlay.py  timeutil.py
tests/: conftest.py  test_ass_lint.py  test_cli.py  test_parse_iso8601.py  test_timeutil.py
tests/fixtures/: concept2-logbook-workout-109762845.fit
