[project]
name = "c2-overlay"
authors = [
    {name = "banteg"},
]
version = "0.1.0"
description = "generate PM5-style overlays for rowing videos from Concept2 FIT files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fitparse>=1.2.0",
]

[project.scripts]
c2-overlay = "c2_overlay:main"
c2-overlay-lint = "c2_overlay.ass_lint:main"

[tool.uv]
package = true
